[FEAT] added about section and fixed an overflow on x axis

--- a/css/style.css
+++ b/css/style.css
@@ -9,24 +9,11 @@
     border: 1px solid black;
 }
 
-.jumbo{
-    height: 200px;
-    border: 1px solid black;
-}
-
-.img{
-    height: 100px;
-    width: 100px;
-    border: 1px solid black;
+.content{
     background-color: red;
+    height: 100px;
 }
 
-.text{
-    width: 125px;
-    height: 50px;
-    border: 1px solid black;
-    background-color: blue;
-}
 
 .card{
     height: 75px;
